@@ -1,3 +1,8 @@
+2001-11-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/sparc/fpu/bits/mathinline.h (__signbitf, __signbit,
+	__signbitl): Only define for ISO C99.
+
 2001-11-22  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nss/nss_files/files-hosts.c (_nss_files_get##name##_r): Set
